Migrate to Gradle 7 To be able to use with projects using Gradle 7 and Java 17